Number widget overlapping fixed (#2043)
* Number widget overlapping fixed

--- a/extensions/ui/org.eclipse.smarthome.ui.paper/web-src/css/views.css
+++ b/extensions/ui/org.eclipse.smarthome.ui.paper/web-src/css/views.css
@@ -74,11 +74,14 @@ section#main.header-tabs {
 	box-shadow: 0px 2px 2px 0 rgba(0, 0, 0, 0.26); */
 	padding: 5px;
 	border-radius: 2px;
-	margin-top: 10px;
+	padding-top: 0px;
 }
 
 .number-control-widget md-slider {
 	margin: 0px;
+}
+.number-control-widget .text-left, .number-control-widget .text-right {
+	margin-top: 10px;
 }
 
 .items .item .icontrol>div>div {
